--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -10,4 +10,144 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+input {
+  border-radius: 25px;
+  padding: 10px;
+  font-size: 1.2em;
+}
+button{
+  border-radius: 25px;
+  border: none;
+  padding: 10px;
+  background: pink;
+  color:blueviolet;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+
+.container{
+  position: relative;
+}
+
+.register{
+  border-radius: 25px;
+  position: fixed;
+  padding: 10px;
+  font-size: 1.2em;
+  box-shadow:0 2.8px 2.2px rgba(0, 0, 0, 0.034),0 6.7px 5.3px rgba(0, 0, 0, 0.048),0 12.5px 10px rgba(0, 0, 0, 0.06),0 22.3px 17.9px rgba(0, 0, 0, 0.072),0 41.8px 33.4px rgba(0, 0, 0, 0.086),0 100px 80px rgba(0, 0, 0, 0.12);
+  top:35%;
+  left:32%;
+  display: flex;
+  flex-direction: row;
+}
+.chat-box{
+  border-radius: 10px;
+  box-shadow:0 2.8px 2.2px rgba(0, 0, 0, 0.034),0 6.7px 5.3px rgba(0, 0, 0, 0.048),0 12.5px 10px rgba(0, 0, 0, 0.06),0 22.3px 17.9px rgba(0, 0, 0, 0.072),0 41.8px 33.4px rgba(0, 0, 0, 0.086),0 100px 80px rgba(0, 0, 0, 0.12);
+  margin:40px 50px;
+  height: 550px;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+}
+
+.member-list{
+  border-radius: 25px;
+  width: 20%;
+}
+
+.chat-content{
+  border-radius: 25px;
+  width:80%;
+  margin-left: 10px;
+  margin-right: 5px;
+}
+
+.chat-messages{
+  border-radius: 5px;
+  height: 80%;
+  margin-left: 10px;
+  margin-right: 5px;
+}
+
+.send-user{
+  border-radius: 25px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.send-message{
+  border-radius: 25px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.input-message{
+  width:90%;
+  border-radius: 50px;
+  margin-left: 1px;
+}
+
+ul {
+  border-radius: 25px;
+  padding: 0;
+  list-style-type: none;
+}
+.send-button{
+  border-radius: 25px;
+  width:10%;
+  border-radius: 50px;
+  margin-left: 5px;
+  cursor: pointer;
+}
+.member{
+  border-radius: 25px;
+  padding: 10px;
+  background: #eee;
+  border:#000;
+  cursor: pointer;
+  margin: 5px 2px;
+  box-shadow: 0 7px 7px -4px lightblue;
+}
+.member.active{
+  border-radius: 25px;
+  background: #D100FF;
+  color:#fff;
+}
+.member:hover{
+  border-radius: 25px;
+  background: grey;
+  color:#fff;
+}
+
+.avatar{
+  background-color: cornflowerblue;
+  padding: 3px 5px;
+  border-radius: 15px;
+  color:#fff;
+}
+.avatar.self{
+  border-radius: 25px;
+  color:#000;
+  background-color:#00FFC5;
+}
+.message{
+  border-radius: 25px;
+  padding:5px;
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  margin: 5px 10px;
+}
+.message-data{
+  border-radius: 25px;
+  padding:5px;
+}
+.message.self{
+  justify-content: end;
 }
